--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+  
   <!-- Font Awesome Glyphicons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-
+  <link rel="stylesheet" type ="text/css" href="./custom.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
       <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
       <hr>
       <h2>Answer a few basic questions. </h2>
-      <h2>Then find the friend with the greatest compatibility!</h2>
+      <h2>Then find the friend with the great compatibility!</h2>
       <br>
 
       <div>
@@ -35,7 +35,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/a-ravitz/friendFinder-node-express">GitHub Repo</a></p>
       </div>
     </footer>
 
