--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   
   <!-- Font Awesome Glyphicons -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" type ="text/css" href="./custom.css">
 </head>
 
@@ -21,10 +21,10 @@
   <div class="container">
 
     <div class="jumbotron">
-      <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
+      <h1><i class="fas fa-search"></i> Friend Finder <i class="fas fa-user-friends"></i></h1>
       <hr>
       <h2>Answer a few basic questions. </h2>
-      <h2>Then find the friend with the great compatibility!</h2>
+      <h2>Then find the friend of your dreams!</h2>
       <br>
 
       <div>
